load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "state_lib",
    srcs = ["main.go"],
    importpath = "github.com/conrey-engineering/go-octoprint/_examples/state",
    visibility = ["//visibility:private"],
    deps = [
        "//:go-octoprint",
        "@com_github_mgutz_logxi//v1:logxi",
    ],
)

go_binary(
    name = "state",
    embed = [":state_lib"],
    visibility = ["//visibility:public"],
)
